<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:layout_toEndOf="@+id/textView4" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/oval"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="21dp"
        android:background="@drawable/oval"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:fontFamily="cursive"
        android:text="@string/or"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/CreateNewAccount"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>